--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
 asgiref==3.6.0
 Django==4.1.7
+django-jstemplate==2.0.1
+django-mustache==1.1.2
+et-xmlfile==1.1.0
+openpyxl==3.1.2
 Pillow==9.5.0
+pystache==0.6.0
 sqlparse==0.4.3
